# cmake-tutorial

./: .gitignore  README.md
00_template/: README.md
00_template/00_Basic/: CMakeLists.txt  Config.h.in  README.md  main.c
00_template/01_Library/: CMakeLists.txt  README.md
00_template/01_Library/example/: CMakeLists.txt  main.c
00_template/01_Library/include/: libmath.h
00_template/01_Library/src/: libmath.c
00_template/01_Library/test/: CMakeLists.txt  test.c
01-step1/: CMakeLists.txt  Config.h.in  HelloWorld.c  README.md
02-step2_1/: CMakeLists.txt  README.md  main.c
02-step2_1/libs/: CMakeLists.txt  libmath.c
03-step2_2/: CMakeLists.txt  Config.h.in  README.md
04-step3_1/: CMakeLists.txt  README.md
04-step3_1/libs/: CMakeLists.txt
05-step3_2/: CMakeLists.txt  Config.h.in  README.md
05-step3_2/libs/: CMakeLists.txt  libmath.c
06-step4_1/: CMakeLists.txt  README.md
07-step4_2/: CMakeLists.txt  README.md  main.c
08-step4_3/: CMakeLists.txt  README.md  main.c
09-step5_1/: CMakeLists.txt  README.md  main.c
09-step5_1/libs/: CMakeLists.txt
10-step5_2/: CMakeLists.txt  README.md  main.c
11-step12/: CMakeLists.txt  README.md
